package com.codecool.battleship;

public class Display {
    public Display(){}

    public void printMenu(String label, String[] menu){
        //TODO prints any menu given
    }
    public void printBoard(String[][] board /* or char[][] board */){
        //TODO receives String/char board
    }
    public void printGameMessage(String msg){
        System.out.println(msg);
    }
    public void printTheOutcomeOfTheGame(){
        //TODO probably receives game or player as argument
    }
}
